<resources>
    <string name="app_name">CongresoGymMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="listado_de_participantes">Listado de participantes</string>
    <string name="nombre_form">Nombre:</string>
    <string name="tel_fono_form">Teléfono:</string>
    <string name="email_form">Email:</string>
    <string name="fecha_inicio_form">Fecha Inicio:</string>
    <string name="fecha_fin_form">Fecha fin:</string>
    <string name="plan_form">Plan:</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user__update">User_Update</string>
    <string name="comentario">Comentario</string>
    <string name="asistentes">Asistentes</string>
    <string name="programaci_n">Programación</string>
    <string name="localizaci_n">Localización</string>
    <string name="fechas">Fechas</string>
    <string name="congreso_gym">Congreso Gym</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="llevar_una_vida_saludable_est_estrechamente_relacionado_con_una_forma_de_vida_que_incluya_la_pr_ctica_habitual_de_actividad_f_sica_acompa_ada_de_una_alimentaci_n_saludable">Llevar una vida saludable está estrechamente relacionado con una forma de vida que incluya la práctica habitual de actividad física acompañada de una alimentación saludable.</string>
    <string name="vida_saludable">Vida Saludable</string>
    <string name="_9_00_a_11_00">(9:00 a 11:00)</string>
    <string name="_11_30_a_13_30">(11:30 a 13:30)</string>
    <string name="hiit">HIIT</string>
    <string name="entrenamiento_de_intervalos_de_alta_intensidad_una_t_cnica_que_se_ha_ganado_a_pulso_su_nombre_como_el_m_todo_de_entrenamiento_m_s_efectivo_del_mercado">Entrenamiento de intervalos de alta intensidad – una técnica que se ha ganado a pulso su nombre como el método de entrenamiento más efectivo del mercado.</string>
    <string name="_17_15_a_19_30">(17:15 a 19:30)</string>
    <string name="entreno_oclusivo">Entreno Oclusivo</string>
    <string name="el_entrenamiento_oclusivo_o_entrenamiento_en_oclusi_n_es_un_m_todo_de_entrenamiento_no_tan_habitual_pero_que_puede_suponer_una_ventaja_evidente_de_cara_a_la_mejora_de_la_composici_n_corporal_de_ciertas_personas">El entrenamiento oclusivo o entrenamiento en oclusión es un método de entrenamiento no tan habitual pero que puede suponer una ventaja evidente de cara a la mejora de la composición corporal de ciertas personas</string>
    <string name="_10_00_a_12_30">(10:00 a 12:30)</string>
    <string name="descompensaciones_musculares">Descompensaciones musculares</string>
    <string name="nikki_nos_hablara_sobre_las_descompensaciones_musculares_que_por_lo_general_no_suelen_ser_un_asunto_muy_importante_y_por_otro_nadie_se_escapa_a_ellas">Nikki nos hablara sobre las descompensaciones musculares, que por lo general no suelen ser un asunto muy importante, y por otro, nadie se escapa a ellas.</string>
    <string name="_16_00_a_18_00">(16:00 a 18:00)</string>
    <string name="ba_os_de_hielo">Baños de hielo</string>
    <string name="_10_00_a_13_00">(10:00 a 13:00)</string>
    <string name="hipertrofia">Hipertrofia</string>
    <string name="la_hipertrofia_muscular_es_el_nombre_cient_fico_dado_al_fen_meno_de_crecimiento_en_el_tama_o_de_las_c_lulas_musculares">La hipertrofia muscular es el nombre científico dado al fenómeno de crecimiento en el tamaño de las células musculares.</string>
    <string name="competitividad_sana_y_competitividad_t_xica">Competitividad sana y competitividad tóxica</string>
    <string name="as_visto_no_parece_una_t_cnica_muy_apetecible_sin_embargo_sus_defensores_aseguran_que_esta_pr_ctica_ayuda_a_que_nuestros_m_sculos_nervios_huesos_y_tendones_se_recuperen_mejor_despu_s_de_realizar_ejercicio_f_sico_intenso_o_exigente">Así visto, no parece una técnica muy apetecible. Sin embargo, sus defensores aseguran que esta práctica ayuda a que nuestros músculos, nervios, huesos y tendones se recuperen mejor después de realizar ejercicio físico intenso o exigente</string>
    <string name="alojamiento">Alojamiento</string>
    <string name="el_hotel_mas_cercano_calidad_precio_es_el_hotel_caballo_negro_una_opci_n_que_es_muy_viable_es_alquilar_un_piso_o_una_casa_se_encuentran_varias_opciones_en_paginas_como_airbnb_booking_tripadvisor">El hotel mas cercano, calidad precio es el Hotel Caballo Negro. Una opción que es muy viable es alquilar un piso o una casa. Se encuentran varias opciones en paginas como airbnb, booking, tripadvisor.</string>
    <string name="transporte">Transporte</string>
    <string name="para_llegar_en_coche_en_la_entrada_se_dispone_de_aparcamiento_usando_tambien_el_aparcamiento_de_la_universidad_y_si_vas_en_bus_encontraras_muchas_opciones_como_la_linea_m_30_de_puerto_real_a_cadiz_y_viceversa">Para llegar en coche, en la entrada se dispone de aparcamiento, usando tambien el aparcamiento de la Universidad. Y si vas en bus encontraras muchas opciones como la linea m-30 de Puerto Real a Cadiz y viceversa.</string>
    <string name="fecha_de_inscripcion">Fecha de inscripcion</string>
    <string name="_29_10_2018">29/10/2018</string>
    <string name="fecha_de_presentaci_n">Fecha de presentación</string>
    <string name="_19_01_2019">19/01/2019/</string>
    <string name="fecha_del_congreso">Fecha del congreso</string>
    <string name="_20_01_2019">20/01/2019/</string>
</resources>
