<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:textColor="@android:color/background_dark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/_10_00_a_13_00"
        android:gravity="center"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@color/cardColor">

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hipertrofia"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/la_hipertrofia_muscular_es_el_nombre_cient_fico_dado_al_fen_meno_de_crecimiento_en_el_tama_o_de_las_c_lulas_musculares"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:textColor="@android:color/background_dark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/_16_00_a_18_00"
        android:gravity="center"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/cardColor">

            <LinearLayout
                android:layout_width="214dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/competitividad_sana_y_competitividad_t_xica"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/as_visto_no_parece_una_t_cnica_muy_apetecible_sin_embargo_sus_defensores_aseguran_que_esta_pr_ctica_ayuda_a_que_nuestros_m_sculos_nervios_huesos_y_tendones_se_recuperen_mejor_despu_s_de_realizar_ejercicio_f_sico_intenso_o_exigente"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>




</LinearLayout>