<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top">
    <TextView
        android:textColor="@android:color/background_dark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/_10_00_a_12_30"
        android:gravity="center"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_weight="1"
            android:background="@color/cardColor">

            <LinearLayout
                android:layout_width="204dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/descompensaciones_musculares"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/nikki_nos_hablara_sobre_las_descompensaciones_musculares_que_por_lo_general_no_suelen_ser_un_asunto_muy_importante_y_por_otro_nadie_se_escapa_a_ellas"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:textColor="@android:color/background_dark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/_16_00_a_18_00"
        android:gravity="center"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/cardColor">

            <LinearLayout
                android:layout_width="214dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ba_os_de_hielo"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/as_visto_no_parece_una_t_cnica_muy_apetecible_sin_embargo_sus_defensores_aseguran_que_esta_pr_ctica_ayuda_a_que_nuestros_m_sculos_nervios_huesos_y_tendones_se_recuperen_mejor_despu_s_de_realizar_ejercicio_f_sico_intenso_o_exigente"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14dp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>